--- a/PhotoSiteWork/photo_site.html
+++ b/PhotoSiteWork/photo_site.html
@@ -36,26 +36,26 @@
             <div class="exampleInlineBlocks">
                 
                 <div class="exampleBlock">
-                    <div class="shortInfo1">
+                    <div class="shortInfo1 bgpic1">
                         <div class="word">20.02</div>
                     </div>                    
                     <div class="shortInfo2">Lorem ipsum dolor sit amet.</div>
                 </div>
 
                 <div class="exampleBlock">
-                    <div class="shortInfo1">
+                    <div class="shortInfo1 bgpic2">
                         <div class="word">12.03</div>
                     </div>                    
                     <div class="shortInfo2">Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="exampleBlock">
-                    <div class="shortInfo1">
+                    <div class="shortInfo1 bgpic3">
                         <div class="word">05.04</div>
                     </div>                    
                     <div class="shortInfo2">Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="exampleBlock">
-                    <div class="shortInfo1">
+                    <div class="shortInfo1 bgpic4">
                         <div class="word">17.08</div>
                     </div>                    
                     <div class="shortInfo2">Lorem ipsum dolor sit amet.</div>
@@ -126,6 +126,8 @@
         function showText(){
             par.classList.toggle('.textBlockEvent');
         }
+
+        showText();
     
     </script>
 
