--- a/PhotoSiteWork/photo_site.html
+++ b/PhotoSiteWork/photo_site.html
@@ -221,14 +221,16 @@
         fetch(url)
         .then(res => res.json())
         .then(data => {
-            console.log(data.results)
-            return data
+            console.log(data.results);
+            return data;
         })
-        .then(function(data){
-            
+        .then(function(urls){
+            /* let arrLinks = [];
+            arrLinks = arrLinks.toggle(urls.regular);
+            return arrLinks; */
         })
 
-  
+        
 
     </script>
 
