--- a/PhotoSiteWork/photo_site.html
+++ b/PhotoSiteWork/photo_site.html
@@ -146,11 +146,11 @@
                 <div class="portfolio">
                     <div class="circlePortret personFace1"></div>
                     <div class="nameAndExperience">
-                        <p>NAME SURNAME</p>
-                        <p>experience:</p><br>
+                        <p>Olga Gus</p>
+                        <p>Work experience: 4 years</p><br>
                     </div>
                     <div class="infoPerson">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consectetur veniam maiores consequatur nihil, ratione cumque, facilis saepe magnam omnis earum incidunt eum. Sunt, neque?</p>
+                        <p>I am ready to help beginners in the field of photography, I will answer any questions regarding the selection of models, image and props.</p>
                     </div><br>
                     <div class="iconLinks">
                         <button class="noneStyleButton"><i class="bi bi-instagram"></i></button>
@@ -160,11 +160,11 @@
                 <div class="portfolio">
                     <div class="circlePortret personFace2"></div>
                     <div class="nameAndExperience">
-                        <p>NAME SURNAME</p>
-                        <p>experience:</p><br>
+                        <p>Ekaterina Tashkevich</p>
+                        <p>Work experience: 6 years</p><br>
                     </div>
                     <div class="infoPerson">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consectetur veniam maiores consequatur nihil, ratione cumque, facilis saepe magnam omnis earum incidunt eum. Sunt, neque?</p>
+                        <p>According to my students, my lessons are held in a relaxed atmosphere. Photo shoots are also easy for me, including for younger children.</p>
                     </div><br>
                     <div class="iconLinks">
                         <button class="noneStyleButton"><i class="bi bi-instagram"></i></button>
@@ -174,11 +174,11 @@
                 <div class="portfolio">
                     <div class="circlePortret personFace3"></div>
                     <div class="nameAndExperience">
-                        <p>NAME SURNAME</p>
-                        <p>experience:</p><br>
+                        <p>Mikhail Chatsky</p>
+                        <p>Work experience: 7 years</p><br>
                     </div>
                     <div class="infoPerson">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consectetur veniam maiores consequatur nihil, ratione cumque, facilis saepe magnam omnis earum incidunt eum. Sunt, neque?</p>
+                        <p>Do you have any ideas and wishes for a photo shoot? Have you chosen a topic, but you can't decide on a place or an image? Don't panic! I will provide you with the best photo shoot of your life!</p>
                     </div><br>
                     <div class="iconLinks">
                         <button class="noneStyleButton"><i class="bi bi-instagram"></i></button>
@@ -284,8 +284,8 @@
         <div class="signsFooter">
             <h3>If you have any questions, please contact us by phone:<br>
                 +000 00 000 00 00</h3><br>
-            <p>Background, Minsk | Official photo studio site</p>
-            <p>© Made by myself</p>
+            <p><span style="font-family: monospace"><i>Background</i></span>, Minsk | Official photo studio site</p>
+            <p>© Made by zigzag01</p>
         </div>
 
     </footer>
